# livekit-voice-call-runner

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
docs/mario/: add-inbound.md  refactor-outbound-config.md
examples/instructions/: answer_service_call.md  helpdesk_triage.md
samples/instructions/: discuss_car_issue.md
src/livekit_voice_call_runner/: cli.py  config.py  factory.py  logger.py  model.py  util.py
src/livekit_voice_call_runner/cli/: inbound.py  main.py  outbound.py
src/livekit_voice_call_runner/concurrency/: tasks_runner.py
src/livekit_voice_call_runner/config/: base.py  outbound.py  shared.py
src/livekit_voice_call_runner/core/: call_agent.py  call_dialer.py  call_event_listener.py  call_orchestrator.py  call_runner.py  call_session_starter.py  factory.py  ishutdown.py
src/livekit_voice_call_runner/inbound/: worker.py
src/livekit_voice_call_runner/livekit/: disconnect_reason_mapper.py
src/livekit_voice_call_runner/outbound/: call_dialer.py  call_orchestrator.py  call_room_connector.py  call_runner.py
tests/: conftest.py
tests/unit/: test_config.py
tests/unit/cli/: test_inbound.py  test_inbound_cli.py  test_main.py  test_outbound.py  test_outbound_cli.py
tests/unit/config/: conftest.py  test_base.py  test_outbound.py
tests/unit/core/: test_call_event_listener.py  test_call_session_starter.py
tests/unit/inbound/: test_worker.py
tests/unit/outbound/: test_call_orchestrator.py  test_call_runner.py
